--- a/templates/index.html
+++ b/templates/index.html
@@ -17,13 +17,12 @@
     </p>
 </div>
 
-<div class="card text-bg-dark">
-    <img src="{{ url_for('static', filename='images/wp7795842-desktop-4k-minimal-wallpapers.png') }}" class="card-img" alt="..." height="540px" >
-    <div class="card-img-overlay">
-      <h5 class="card-title">This website is styled with Bootstrap</h5>
-      <p class="card-text">I use this awsome library to create beutiful websites. Index.html is created from the Jinja template "base.html".</p>
+<div class="card text-bg-light p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
+    <h5 class="card-title">This website is styled with Bootstrap</h5>
+      <p class="card-text">I use this awsome library to create beutiful websites.</p>
       <p class="card-text"><small>The date today is {{ date }}</small></p>
-    </div>
-  </div>
 
+  </div>
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="{{ url_for('static', filename='bootstrap.js') }}"></script>
 {% endblock %} 
